# everything-cli

./: Cargo.toml
src/: main.rs
